style/style.css
/*===== GOOGLE FONTS =====*/
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
/*===== VARIABLES CSS =====*/
:root {
   --header-height: 3rem;
   --font-semi: 600;
   /*===== Colores =====*/
   /*Purple 260 - Red 355 - Blue 224 - Pink 340*/
   /* HSL color mode */
   --hue-color: 224;
   --first-color: hsl(var(--hue-color), 89%, 60%);
   --second-color: hsl(var(--hue-color), 56%, 12%);
   /*===== Fuente y tipografia =====*/
   --body-font: 'Poppins', sans-serif;
   --big-font-size: 2rem;
   --h2-font-size: 1.25rem;
   --normal-font-size: .938rem;
   --smaller-font-size: .75rem;
   /*===== Margenes =====*/
   --mb-2: 1rem;
   --mb-4: 2rem;
   --mb-5: 2.5rem;
   --mb-6: 3rem;
   /*===== z index =====*/
   --z-back: -10;
   --z-fixed: 100;
}

@media screen and (min-width: 968px) {
:root {
   --big-font-size: 3.5rem;
   --h2-font-size: 2rem;
   --normal-font-size: 1rem;
   --smaller-font-size: .875rem;
}
}

/*===== BASE =====*/
/* width */
::-webkit-scrollbar {
   width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
   background: #0a0a0a20;
   border-radius: .5rem;
}

/* Handle */
::-webkit-scrollbar-thumb {
   background: #888888aa;
   border-radius: .5rem;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
    background: #555555cc;
   }
   
*, ::before, ::after {
   box-sizing: border-box;
}

html {
   scroll-behavior: smooth;
   overflow-x: hidden;
}

i{
   font-size: 32px;
}

body {
   /* margin: var(--header-height) 0 0 0; */
   margin: 0;
   padding: 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   color: var(--second-color);
}

h1, h2, h3, h4, p {
   margin: 0;
}

i{
   cursor: pointer;
}

ul {
   margin: 0;
   padding: 0;
   list-style: none;
}

a, button {
   font-family: var(--body-font);
   color: var(--second-color);
   text-decoration: none;
}

input, textarea{ 
   font-family: var(--body-font);
}

img {
   max-width: 100%;
   height: auto;
   display: block;
}

/* Class style */
section{
   padding-top: 3rem;
   padding-bottom: 4rem;
}

.home{
   padding-top: calc(6rem + var(--header-height));
}

.container{ 
   max-width: 75rem;
   margin: 0 auto;
   padding: 1em 2em;
}

.container > header{
   position: fixed;
   width: 100%; 
   top: 0; 
   left: 0; 
   padding: 0 2em;
   z-index: var(--z-fixed);
   box-shadow: 0 1px 4px rgba(146, 161, 176, 0.15);
   background-color: #fff;
}

header > nav{
   display: flex;
   justify-content: space-between;
   align-items: center;
   max-width: 71rem;
   height: calc(var(--header-height) + 1.5rem);
   margin: 0 auto; 
   font-weight: var(--font-semi);
}

.nav__logo{
   cursor: pointer;
}

.nav__menu{
   display: flex;
   justify-content: space-between;
}

.nav__menu-item{
   position: relative;
   margin-left: 2rem;
   padding-bottom: 7px;
}

.nav__toggle{
   display: none;
   cursor: pointer;
}

.bxs-moon, .bxs-sun{
   margin-top: .3em;
   font-size: var(--normal-font-size);
}

.bx-menu{
   font-size: 1.5rem;
}

.nav__menu-item a{
   transition: all .3s ease;
}

.nav__menu-item a:hover{
   color: var(--first-color);
}

.active::after{
   content: '';
   position: absolute;
   bottom: 0; 
   left: 0;
   width: 100%; 
   height: 0.1rem;
   background-color: var(--first-color);
}

.home{
   height: calc(100vh - var(--header-height));
   display: flex;
   justify-content: space-between;
   align-items: center;
}

.home-text__header{
   /* display: inline-block; */
   margin-bottom: 5rem;
   font-size: var(--big-font-size);
}

.home-text__header_colored{
   color: var(--first-color);
}

.btn-style{
   background-color: var(--first-color);
   border: 0px;
   border-radius: 0.5rem;
   padding: 1em 2.5em;
   margin-bottom: 4rem;
   transition: .3s;
}

.home-contact__btn{
   font-weight: var(--font-semi);
   color: #fff;
   font-size: var(--normal-font-size);
   transition: .3s ease;
}

.btn-style:hover{
   box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.15);
}

.home-social{
   margin-top: 5em;
}

.home__img{
   width: 33vw; 
   fill: var(--first-color);
}

.home-social .bx{
   font-size: 2rem;
   transition: all .3s ease;
   cursor: pointer;
}

.home-social .bx:hover{
   color: var(--first-color);
}

/* About */
.header-style{
   position: relative;
   width: fit-content;
   margin: 3rem auto 5rem auto;
   padding-bottom: 15px;
   font-size: var(--h2-font-size);
   color: var(--first-color);
   text-align: center;
}

.header-style::after{
   content: '';
   position: absolute;
   left: 0;
   bottom: 0;
   width: 100%;
   height: 3px; 
   background-color: var(--first-color);
}

.about-data{
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
}

.about-data__img{
   width: 300px;
   border-radius: .5rem;
}

.about-text{
   max-width: 45%;
}

.text__header{
   font-size: calc(var(--h2-font-size) - 0.2rem);
   margin-bottom: 20px;
}

/* Skills style */

.skills-useful{
   display: flex; 
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
}

.skills-text{
   max-width: 60%;
}

.skills-text__subtext{
   margin-bottom: 40px;
}

.skills-info{
   display: flex;
   flex-wrap: wrap;
}

.skills-data{
   display: flex;
   align-items: center;
   flex-wrap: wrap;
   padding: 5px 10px;
   margin-right: 20px;
   margin-bottom: 15px;
   box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
   border-radius: .5rem;
}

.box{
   flex-basis: 35%;
   flex-grow: 0;
   flex-shrink: 0;
}

.bxl-css3{
   color: var(--first-color);
}

.bxl-html5{
   color: #f06529;
}

.bxl-javascript{
   color: #F0DB4F;
}

.bxl-sass{
   color: #CD6799;
}

.skills-data__text{
   margin-left: 15px;
}

.skills__img{
   width: 50vw;
   border-radius: .5rem;
}

/* Work style */

.work-wrapper{
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
}

.work-wrapper img{
   flex-basis: 30%; 
   border-radius: .5rem;
   margin-bottom: 3.3%;
   box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
   transition: all .5s ease;
}

.work-wrapper img:hover{
   scale: 105%;
}

.work__img{
   transition: order .5s ease;
}

/* Contact style */

.contact__form{
   display: flex;
   flex-direction: column;
   max-width: 40vw;
   margin: 0 auto;
}

.contact__form > textarea{
   resize: none;
}

.contact__input{
   width: 60%;
   font-size: var(--normal-font-size);
   font-weight: var(--font-semi);
   padding: 1rem;
   border-radius: .5rem;
   border: 1.5px solid var(--second-color);
   outline: none;
   margin: 0 auto var(--mb-4) auto;
   transition: all 1s ease;
}

.contact__input:focus{
   border: 1.5px solid var(--first-color);
   transition: border .5s ease;
   box-shadow: 0px 4px 25px rgba(62, 111, 244, 0.25);
}

.contact__form-btn{
   align-self: center;
   color: #fff; 
   font-weight: var(--font-semi);
   font-size: var(--normal-font-size);
   margin-top: 1em;
}

/* Media queries */

@media screen and (min-width: 279px) {
   .nav__menu{
      display: none;
   }
   
   .nav__toggle{
      display: block;
   }
   
   .home{
      display: flex;
      flex-wrap: wrap;
      justify-content: center;
      padding-top: 6rem;
   }

   .home__img{
      order: -1;
      flex-basis: 70vw;
      flex-grow: 0;
      margin: 0 0 4rem 0;
   }

   .home-text__header{
      margin-bottom: 3rem;
   }

   .home-social{
      display: block;
      margin-top: 3rem;
   }

   .about{
      margin-top: 7rem;
      padding-bottom: 2rem;
   }

   .about-text{
      margin-top: 3rem;
      max-width: 100%;
   }

   .about-data__img{
      width: 100%;
   }

   .skills{
      padding-top: 2rem;
      padding-bottom: 0;
   }

   .skills-text{
      max-width: 100%;
   }

   .skills-info{
      flex-wrap: wrap;
   }

   .box{
      flex-basis: 100%;
      flex-grow: grow;
   }

   .skills__img{
      margin-top: 2rem;
      flex-basis: 100%;
   }

   .work-wrapper{
      row-gap: .5rem;
   }

   .contact{
      padding-top: 0rem;
   }

   .contact__form{
      max-width: 100vw;
   }
}

@media screen and (min-width: 374px) {
   .about{
      margin-top: 40vw;
   }
}

@media screen and (min-width: 767px) {
   .nav__menu{
      display: flex;
   }
   
   .nav__toggle{
      display: none;
   }
   
   .home{
      display: flex;
      flex-wrap: wrap;
      justify-content: space-between;
      padding-top: 6rem;
   }

   .home__img{
      order: 0;
      flex-basis: 45vw;
      flex-grow: 0;
      margin: 0 0 4rem 0;
   }

   .home-text__header{
      margin-bottom: 3rem;
   }

   .home-social{
      display: block;
      margin-top: 3rem;
   }

   .about{
      margin-top: 3rem;
   }

   .about-text{
      margin-top: 3rem;
      max-width: 50%;
   }

   .about-data__img{
      width: 40%;
   }

   .skills{
      padding-top: 2rem;
      padding-bottom: 0;
   }

   .skills-text{
      max-width: 100%;
   }

   .skills-info{
      flex-wrap: wrap;
   }

   .box{
      flex-basis: 50%;
      flex-grow: grow;
      flex-shrink: shrink;
   }

   .skills__img{
      display: none;
   }



   .work-wrapper img{
      max-width: 48%;
      flex-grow: 1;
      flex-shrink: 1;
   }

   .contact{
      padding-top: 0rem;
   }

   .contact__form{
      max-width: 100vw;
   }
}

@media screen and (min-width: 1024px) {
   .nav__menu{
      display: flex;
   }
   
   .nav__toggle{
      display: none;
   }
   
   .home{
      display: flex;
      flex-wrap: wrap;
      justify-content: space-between;
      padding-top: 6rem;
   }

   .home__img{
      order: 0;
      flex-basis: 33vw;
      flex-grow: 0;
      margin: 0 0 4rem 0;
   }

   .home-text__header{
      margin-bottom: 3rem;
   }

   .home-social{
      display: block;
      margin-top: 3rem;
   }

   .about{
      margin-top: 0;
   }

   .about-text{
      margin-top: 3rem;
      max-width: 50%;
   }

   .about-data__img{
      width: 30%;
   }

   .skills{
      padding-top: 2rem;
      padding-bottom: 0;
   }
   
   .skills-left{
      max-width: 45%;
   }

   .skills-text{
      max-width: 100%;
   }

   .skills__img{
      display: block;
      flex-basis: 20%;
      width: 40vw;
   }

   .work-wrapper{
      row-gap: 0;
   }

   .work-wrapper img{
      max-width: 32%;
      margin-bottom: 2%;
   }

   .contact{
      padding-top: 3rem;
   }

   .contact__form{
      max-width: 60vw;
   }
}

@media screen and (max-width: 767px) {
   .nav__menu {
      display: block;
      position: fixed;
      top: calc(var(--header-height) + 1.53rem);
      right: -100%;
      width: 50%;
      height: 100%;
      padding: 2rem;
      background-color: var(--second-color);
      transition: .5s;
   }

   .nav__menu-item > *{
      color: #fff;
   }

   .nav__menu-item {
      margin-bottom: var(--mb-4);
    }

   .nav__menu-item {
      margin-bottom: var(--mb-4);
   }
    
    .nav__menu-link {
      position: relative;
      color: #fff;
    }
   
    .active::after{
       width: 60px;
    }


 }
 

